service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: httpd
  name: httpd
  namespace: bgottfri
  selfLink: /api/v1/namespaces/bgottfri/services/httpd
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpd
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
